fixed off-center title

--- a/front-end/public/www/css/style.css
+++ b/front-end/public/www/css/style.css
@@ -3,5 +3,5 @@
 }
 
 #center {
-  margin-left: 27vw;
+  margin-left: 25vw;
 }
